# lander

competition/competition/: package.xml  setup.py
competition/competition/competition/large_models/: config.py  vllm_scene_understand_service.py
competition/competition/competition/navigation_transport/: voice_control_navigation.py
competition/competition/competition/navigation_transport/calibration_position/: automatic_pick.py
competition/competition/competition/navigation_transport/msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
competition/competition/competition/navigation_transport/ramp/: ramp copy.py  ramp.py
competition/competition/competition/navigation_transport/shape_recognition/: shape_recognition_down.py
competition/competition/competition/navigation_transport/yolo5/: detect_reference.py  yolov5_node.py
competition/competition/config/: config.yaml
competition/competition/docs/: ros2_调试手册.md
competition/competition/launch/: automatic_pick.launch.py  competition.launch.py  mic_init.launch.py  position_correction_pick.launch.py  ramp.launch.py  shape_recognition.launch.py  vllm_scene_understand_service.launch.py
