<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>competition</name>
  <version>0.0.1</version>
  <description>Competition package ported to ROS2</description>
  <maintainer email="1270161395@qq.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>servo_controller_msgs</depend>
  <depend>kinematics_msgs</depend>
  <depend>interfaces</depend>
  <depend>sdk</depend>
  <depend>xf_mic_asr_offline</depend>
  <depend>xf_mic_asr_offline_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
